--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home page | Madhu Portfolio</title>
+    <title>Home page | Madhu Portfolio | madhu.com</title>
 
     <!-- style sheet -->
     <link rel="stylesheet" href="css/bootstrap.css">
