--- a/about.html
+++ b/about.html
@@ -189,73 +189,73 @@
                                             <img src="image/Myworks/MP1.jpg" class="d-block w-100" alt="1">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP2.jpg" class="d-block w-100" alt="2">
+                                            <img src="image/Myworks/MP2.jpg" class="d-block w-100" alt="2">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP3.jpg" class="d-block w-100" alt="3">
+                                            <img src="image/Myworks/MP3.jpg" class="d-block w-100" alt="3">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP4.jpg" class="d-block w-100" alt="4">
+                                            <img src="image/Myworks/MP4.jpg" class="d-block w-100" alt="4">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP5.jpg" class="d-block w-100" alt="5">
+                                            <img src="image/Myworks/MP5.jpg" class="d-block w-100" alt="5">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP6.jpg" class="d-block w-100" alt="6">
+                                            <img src="image/Myworks/MP6.jpg" class="d-block w-100" alt="6">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP7.jpg" class="d-block w-100" alt="7">
+                                            <img src="image/Myworks/MP7.jpg" class="d-block w-100" alt="7">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP8.jpg" class="d-block w-100" alt="8">
+                                            <img src="image/Myworks/MP8.jpg" class="d-block w-100" alt="8">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP9.jpg" class="d-block w-100" alt="9">
+                                            <img src="image/Myworks/MP9.jpg" class="d-block w-100" alt="9">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP10.jpg" class="d-block w-100" alt="10">
+                                            <img src="image/Myworks/MP10.jpg" class="d-block w-100" alt="10">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP11.jpg" class="d-block w-100" alt="11">
+                                            <img src="image/Myworks/MP11.jpg" class="d-block w-100" alt="11">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP12.jpg" class="d-block w-100" alt="12">
+                                            <img src="image/Myworks/MP12.jpg" class="d-block w-100" alt="12">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP13.jpg" class="d-block w-100" alt="13">
+                                            <img src="image/Myworks/MP13.jpg" class="d-block w-100" alt="13">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP14.jpg" class="d-block w-100" alt="14">
+                                            <img src="image/Myworks/MP14.jpg" class="d-block w-100" alt="14">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP15.jpg" class="d-block w-100" alt="15">
+                                            <img src="image/Myworks/MP15.jpg" class="d-block w-100" alt="15">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP16.jpg" class="d-block w-100" alt="16">
+                                            <img src="image/Myworks/MP16.jpg" class="d-block w-100" alt="16">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP17.jpg" class="d-block w-100" alt="17">
+                                            <img src="image/Myworks/MP17.jpg" class="d-block w-100" alt="17">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP18.jpg" class="d-block w-100" alt="18">
+                                            <img src="image/Myworks/MP18.jpg" class="d-block w-100" alt="18">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP19.jpg" class="d-block w-100" alt="19">
+                                            <img src="image/Myworks/MP19.jpg" class="d-block w-100" alt="19">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP20.jpg" class="d-block w-100" alt="20">
+                                            <img src="image/Myworks/MP20.jpg" class="d-block w-100" alt="20">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP21.jpg" class="d-block w-100" alt="21">
+                                            <img src="image/Myworks/MP21.jpg" class="d-block w-100" alt="21">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP22.jpg" class="d-block w-100" alt="22">
+                                            <img src="image/Myworks/MP22.jpg" class="d-block w-100" alt="22">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP23.jpg" class="d-block w-100" alt="23">
+                                            <img src="image/Myworks/MP23.jpg" class="d-block w-100" alt="23">
                                             </div>
                                             <div class="carousel-item">
-                                            <img src="image/myworks/MP24.jpg" class="d-block w-100" alt="24">
+                                            <img src="image/Myworks/MP24.jpg" class="d-block w-100" alt="24">
                                             </div>
                                         </div>
                                         <a class="carousel-control-prev" href="#carousel-photo" role="button" data-slide="prev">
