--- a/index.html
+++ b/index.html
@@ -75,14 +75,13 @@
                                 <article>
                                     <header>
                                         <h1>Madhusudhan</h1>
-                                        <sub-header>Sr. Graphic Designer, UI Designer & Art Director</sub-header>
+                                        <sub-header>Sr. Graphic Designer / UI Designer, Product Film Editor</sub-header>
                                     </header>
                                     <p>
-                                        Highly creative and multi-talented Graphic designer who conceptualizes design solutions for
-                                        Retail sector, FMCG, POS, B2B, Automobile, In-Sales products and 360 degree solutions. Skilled
-                                        in variety of Poster, Mailer, Brochures, Leaflets, Invites, Product Spec sheets, Banner, Exhibition
-                                        stall Art work, Press Ad, Webpage UI design, Gif, Video making and editing, Logo design, Newsletter
-                                        Magazines and Branding.
+                                        Highly creative designer with extensive experience in Print and Digital Media, who conceptualizes design solutions for 
+                                        - Automobile and Construction Industry, Retail sector, FMCG, POS, B2B, In-Sales products and 360 degree solutions. 
+                                        Skilled in variety of Poster, Mailer, Brochures, Leaflets, Invites, Product Spec sheets, Banner, Exhibition stall Art work, 
+                                        Press Ad, Webpage UI design, GIF, Product Shoot, Logo design & Magazines.
                                     </p>
                                 </article>
                             </section>
