--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <a class="nav-link"  href="#"  data-toggle="modal" data-target="#exampleModal">contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" target="_blank" href="image/Madhu-resume-UI.pdf">resume</a>
+                            <a class="nav-link" target="_blank" href="image/Madhu2020-Product Film Resume.pdf">resume</a>
                         </li>
 
                     </ul>
