--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
                                         <div class="carousel-item">
                                             <video controls width="100%">
-                                        <source src="image/MP4/02-PC210-SLF.mp4" type="video/mp4">
+                                        <source src="image/MP4/02-PC210-10MO-TE.mp4" type="video/mp4">
                                         Sorry, your browser doesn't support embedded videos.
                                             </video>
                                         </div>
@@ -265,7 +265,7 @@
 
                                         <div class="carousel-item">
                                             <video controls width="100%" height="430px">
-                                        <source src="image/MP4/08-PC71.mp4" type="video/mp4">
+                                        <source src="image/MP4/08-L&TSL230-slope-compactor.mp4" type="video/mp4">
                                         Sorry, your browser doesn't support embedded videos.
                                             </video>
                                         </div>
